external-crates/move/crates/move-compiler/tests/development/signed_ints/signed_int_assignment_valid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
warning[W09003]: unused assignment
  ┌─ tests/development/signed_ints/signed_int_assignment_valid.move:7:13
  │
7 │         let mut x: i32 = 1i32;
  │             ^^^^^ Unused assignment for variable 'x'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_x')
  │
  = This warning can be suppressed with '#[allow(unused_assignment)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_assignment_valid.move:7:20
  │
7 │         let mut x: i32 = 1i32;
  │                    ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_assignment_valid.move:7:26
  │
7 │         let mut x: i32 = 1i32;
  │                          ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_assignment_valid.move:8:13
  │
8 │         x = 2i32;
  │             ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_assignment_valid.move:14:20
   │
14 │         let mut x: i64 = 5i64;
   │                    ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_assignment_valid.move:14:26
   │
14 │         let mut x: i64 = 5i64;
   │                          ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_assignment_valid.move:15:13
   │
15 │         x = -x;
   │             ^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_assignment_valid.move:21:24
   │
21 │         let (_a, _b): (i32, i64) = (1i32, 2i64);
   │                        ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_assignment_valid.move:21:29
   │
21 │         let (_a, _b): (i32, i64) = (1i32, 2i64);
   │                             ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_assignment_valid.move:21:37
   │
21 │         let (_a, _b): (i32, i64) = (1i32, 2i64);
   │                                     ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_assignment_valid.move:21:43
   │
21 │         let (_a, _b): (i32, i64) = (1i32, 2i64);
   │                                           ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_assignment_valid.move:26:24
   │
26 │         let (_a, _b): (i32, u32) = (1i32, 2u32);
   │                        ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_assignment_valid.move:26:37
   │
26 │         let (_a, _b): (i32, u32) = (1i32, 2u32);
   │                                     ^^^^ Signed integer types are under development
